# workshop_docker

./: Dockerfile  app.py  pyproject.toml
